--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,102 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+@import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-@import url('https://fonts.cdnfonts.com/css/satoshi');
+.bodyStiff {
+	margin: 0; height: 100%; overflow: hidden
+  }
+
+.sticky{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: whitesmoke;
+  z-index: 30;
+  transition: all 1.5s ease-in-out;
+}
+
+@keyframes scrollWatcher {
+  to {scale: 1 1;}
+}
+.scrollWatcher{
+  display: block;
+  height: 5px;
+  margin-top: 15px 0;
+  background-color: rgba(49,70,232,0.5);
+  scale: .5 1;
+  transform-origin: left;
+  animation: scrollWatcher linear;
+  animation-timeline: scroll();
+  z-index: 1000;
+}
+
+
+#mobby .ul{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: white;
+  border: 1px solid #E5E6E7;
+  height: 100vh;
+  color: #C49A6C;
+  width: 270px;
+  font-size: 18px;
+  padding: 15px 20px;
+  border-radius: 8px 0 0 8px;
+}
+
+#mobby{
+background-color: whitesmoke;
+position: fixed;
+height: 100vh;
+height: 100%;
+width: 100%;
+z-index: 1000;
+bottom: 0;
+right: 0;
+}
+#mobby.open{
+  display: flex;
+  justify-content: end;
+}
+
+
+@keyframes mymove {
+  from {right: -100px;}
+  to {right: 50px;}
+}
+
+@keyframes mymoveopposite {
+from{
+  right: -100px;
+}
+to {
+  left: 30px;
+}
+}
+
+@media (min-width : 1024px) {
+  #mobby{
+      position: relative;
+      height: fit-content;
+      width: fit-content;
+      background-color: inherit;
+  }
+  #mobby .ul {
+      flex-direction: row;
+      height: fit-content;
+      width: fit-content;
+      color: #141C25;
+      font-size: 16px;
+      padding: 0;
+      border: 0;
+      background-color: inherit;
+      gap: 44px;
+  }
+}
